<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBgColor"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:contentDescription="@string/app"
        tools:ignore="ContentDescription,MissingConstraints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="-163dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="-66dp"
        app:srcCompat="@drawable/ic_rectangle_18"
        tools:layout_editor_absoluteX="-6dp"
        tools:layout_editor_absoluteY="-2dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_alignParentStart="true"
        android:layout_marginStart="36dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="306dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app"
        tools:ignore="ContentDescription,MissingConstraints"
        app:srcCompat="@drawable/ic_rectangle_18__1_"
        tools:layout_editor_absoluteX="87dp"
        tools:layout_editor_absoluteY="373dp" />

    <ImageView
        android:id="@+id/whiteBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="55dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="127dp"
        app:srcCompat="@drawable/ic_rectangle_19"
        android:contentDescription="@string/app"
        tools:ignore="ContentDescription,MissingConstraints"
        tools:layout_editor_absoluteX="77dp"
        tools:layout_editor_absoluteY="207dp" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="97dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="45dp"
        app:srcCompat="@drawable/ic_logo"
        android:contentDescription="@string/app"
        tools:ignore="ContentDescription,MissingConstraints"
        tools:layout_editor_absoluteX="124dp"
        tools:layout_editor_absoluteY="156dp" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="155dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="131dp"
        app:srcCompat="@drawable/ic_r"
        android:contentDescription="@string/app"
        tools:ignore="ContentDescription,MissingConstraints"
        tools:layout_editor_absoluteX="182dp"
        tools:layout_editor_absoluteY="248dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/ic_group_4"
        android:elevation="4dp"
        android:fontFamily="@font_certs/reemkufi"
        android:gravity="center"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="452dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="150dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/ic_rectangle_2__1_"
        android:elevation="4dp"
        android:fontFamily="@font_certs/reemkufi"
        android:gravity="center"
        android:text="@string/reg"
        app:layout_constraintBottom_toTopOf="@+id/whiteBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.159"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="343dp" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="388dp" />


</androidx.constraintlayout.widget.ConstraintLayout>
